--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!-- Timeline -->
         <div class="nav">
             <h2>Sheriyans</h2>
             <div id="part2">
@@ -17,11 +18,13 @@
             </div>
         </div>
         <h1>Sheriyans Coding School</h1>
-        <!-- <div id="box1"></div> -->
-        <!-- <div id="box2"></div> -->
-        <!-- <h1>Hello from h1</h1>
+        <div id="box1"></div>
+        <!-- yoyo/Repeat Effect -->
+        <div id="box2"></div>
+        <!-- Stagger -->
+        <h1>Hello from h1</h1>
         <h1>I am also h1</h1>
-        <h1>Main hoon h1</h1> -->
+        <h1>Main hoon h1</h1>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
         <script src="script.js"></script>
     </body>
