--- a/Day 2 Scroll Trigger/index.html
+++ b/Day 2 Scroll Trigger/index.html
@@ -12,12 +12,18 @@
             <div id="box"></div>
         </div>
         <div id="page2">
-            <div id="box"></div>
+            <h1>Hello Sheriyans</h1>
+            <h2>Subscribe</h2>            
         </div>
         <div id="page3">
             <div id="box"></div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+        <div id="page4">
+            <h1>Experience</h1>
+        </div>
+        <div id="page5"></div>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>        
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
