--- a/Day 3 Svg anim/index.html
+++ b/Day 3 Svg anim/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <div id="string">
-            <svg width="1350" height="200">
-                <path d="M 20 100 Q 675 100 1340 100" stroke="white" fill="transparent"/>
+            <svg width="1920" height="300">
+                <path d="M 40 150 Q 960 150 1880 150" stroke="white" fill="transparent"/>
             </svg>              
         </div>
-        <div id="pointer"></div>
+        <!-- <div id="pointer"></div> -->
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
         <script src="script.js"></script>
     </body>
