--- a/Day 4 Project/index.html
+++ b/Day 4 Project/index.html
@@ -7,8 +7,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="cursor"></div>
         <div id="main">
-            <div id="cursor"></div>
+            <div id="image">
+                <div id="overlay"></div>
+                <img src="https://images.unsplash.com/photo-1683560334015-2d601b5555e2?q=80&w=1975&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
         <script src="script.js"></script>
