--- a/Day 8 Project 5/index.html
+++ b/Day 8 Project 5/index.html
@@ -45,8 +45,47 @@
                 <h1>Services</h1>
                 <p>all our digital marketing agency, we offer a range of services to help businesses to grow and succeed online. These services include:</p>
             </div>
+            <div class="container">
+                <div class="box">
+                    <div class="box-part1">
+                        <h2>Search engine Optimization</h2>
+                        <h4><i style="color: #bafe66;" class="ri-arrow-right-up-line"></i> Learn more</h4>
+                    </div>
+                    <div class="box-part2">
+                        <img src="./marketing-illustration_878233-772.avif" alt="">
+                    </div>
+                </div>
+                <div class="box black">
+                    <div class="box-part1">
+                        <h2 style="background-color: #fff;">Pay per click advertising</h2>
+                        <h4 style="color: #fff;"><i style="background-color: #fff; color: #1f1f1f;" class="ri-arrow-right-up-line"></i> Learn more</h4>
+                    </div>
+                    <div class="box-part2">
+                        <img src="./marketing-illustration_878233-772.avif" alt="">
+                    </div>
+                </div>
+                <div class="box black">
+                    <div class="box-part1">
+                        <h2 style="background-color: #fff;">Social media marketing</h2>
+                        <h4 style="color: #fff;"><i style="background-color: #fff; color: #1f1f1f;" class="ri-arrow-right-up-line"></i> Learn more</h4>
+                    </div>
+                    <div class="box-part2">
+                        <img src="./marketing-illustration_878233-772.avif" alt="">
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="box-part1">
+                        <h2>E-mail marketing</h2>
+                        <h4><i style="color: #bafe66;" class="ri-arrow-right-up-line"></i> Learn more</h4>
+                    </div>
+                    <div class="box-part2">
+                        <img src="./marketing-illustration_878233-772.avif" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
