--- a/Day 8 Project 5/index.html
+++ b/Day 8 Project 5/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <!-- Build an Animated website with GSAP -->
+        <!-- Page 1 -->
         <section class="section1">
             <nav>
                 <h1><i class="ri-shining-2-fill"></i>WizardZ</h1>
@@ -40,47 +41,79 @@
                 <img src="./Images/zoom-logo-bw.png" alt="">
             </div>
         </section>
+        <!-- Page 2 -->
         <section class="section2">
             <div class="services">
                 <h1>Services</h1>
                 <p>all our digital marketing agency, we offer a range of services to help businesses to grow and succeed online. These services include:</p>
             </div>
             <div class="container">
-                <div class="box">
+                <div id="left1" class="box">
                     <div class="box-part1">
                         <h2>Search engine Optimization</h2>
                         <h4><i style="color: #bafe66;" class="ri-arrow-right-up-line"></i> Learn more</h4>
                     </div>
                     <div class="box-part2">
-                        <img src="./marketing-illustration_878233-772.avif" alt="">
+                        <img src="./Images/s_1.webp" alt="">
                     </div>
                 </div>
-                <div class="box black">
+                <div id="right1" class="box black">
                     <div class="box-part1">
                         <h2 style="background-color: #fff;">Pay per click advertising</h2>
                         <h4 style="color: #fff;"><i style="background-color: #fff; color: #1f1f1f;" class="ri-arrow-right-up-line"></i> Learn more</h4>
                     </div>
                     <div class="box-part2">
-                        <img src="./marketing-illustration_878233-772.avif" alt="">
+                        <img src="./Images/s_2.webp" alt="">
                     </div>
                 </div>
-                <div class="box black">
+                <div id="left2" class="box black">
                     <div class="box-part1">
                         <h2 style="background-color: #fff;">Social media marketing</h2>
                         <h4 style="color: #fff;"><i style="background-color: #fff; color: #1f1f1f;" class="ri-arrow-right-up-line"></i> Learn more</h4>
                     </div>
                     <div class="box-part2">
-                        <img src="./marketing-illustration_878233-772.avif" alt="">
+                        <img src="./Images/s_3.webp" alt="">
                     </div>
                 </div>
-                <div class="box">
+                <div id="right2" class="box">
                     <div class="box-part1">
                         <h2>E-mail marketing</h2>
                         <h4><i style="color: #bafe66;" class="ri-arrow-right-up-line"></i> Learn more</h4>
                     </div>
                     <div class="box-part2">
-                        <img src="./marketing-illustration_878233-772.avif" alt="">
+                        <img src="./Images/s_4.webp" alt="">
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- Page 3 -->
+        <section class="section3">
+            <div class="box1">
+                <div class="part1">
+                    <h1>Let's make things happen</h1>
+                    <p>Contact us today to learn more about how our digital marketing services can help your bussiness grow and succeed online.</p>
+                    <button>Get your free proposal</button>
+                </div>
+                <div class="part2">
+                    <img src="./Images/proposal_illustration.webp" alt="">
+                </div>
+            </div>
+            <div class="cases">
+                <h1>Case study</h1>
+                <p>Explore real-life Examples of our Prown Digital Marketing Success through our Case Studies</p>
+            </div>
+            <div class="box2">
+                <div class="part1">
+                    <p>For local resturant, we implement a targeted PPC compaign that resulted in 50% increase in website traffic and a 20% increase in sales.</p>
+                    <h4>Learn more <i class="ri-arrow-right-up-line"></i></h4>
+                </div>
+                <div class="part2">
+                    <p>For a B2B software company we develope an SEO strategy that resulted in a first page ranking for long keywords and a 200% increase in organic traffic.</p>
+                    <h4>Learn more <i class="ri-arrow-right-up-line"></i></h4>
+                </div>
+                <div class="part3">
+                    <p>For a national retail chain we created a social media marketing campaign that increase followers by 25% and generated a 20% increase in online sales.</p>
+                    <h4>Learn more <i class="ri-arrow-right-up-line"></i></h4>
                 </div>
             </div>
         </section>
